--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="icon" href="https://milujempracu.sk/favicon.ico">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <meta name="theme-color" content="#000000">
-    <title>Milujem svoju prácu!</title>
+    <title>Milujem Momove hlášky!</title>
     <link href="./styles.css" rel="stylesheet">
 </head>
 
@@ -14,8 +14,8 @@
 <body>
     <div id="root">
         <div class="container mx-auto p-5 h-full">
-            <h1 class="text-4xl pt-10">Milujem svoju prácu!</h1>
-            <h4 class="text-1xl text-slate-500 pb-5">Relaxačná aplikácia prospievajúca k zlepšeniu psychickej kondície zamestnanca.
+            <h1 class="text-4xl pt-10">Milujem Momove hlášky!</h1>
+            <h4 class="text-1xl text-slate-500 pb-5">Relaxačná aplikácia prospievajúca k zlepšeniu psychickej kondície.
             </h4>
             <div class="flex flex-wrap">
                 <a id="ano_mali_by_sme" class="soundButton sm:h-40 sm:w-40 hover:border-gray-700 border-transparent">
