--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <meta name="theme-color" content="#000000">
     <title>Milujem Momove hlášky!</title>
     <link href="./styles.css" rel="stylesheet">
+    <script src="index.js" defer></script>
+    <link rel="manifest" href="manifest.webmanifest">
 </head>
 
 
