--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <h4 class="text-1xl text-slate-500 pb-5">Relaxačná aplikácia prospievajúca k zlepšeniu psychickej kondície.
             </h4>
             <div class="flex flex-wrap">
-                <a id="ano_mali_by_sme" class="soundButton sm:h-40 sm:w-40 hover:border-gray-700 border-transparent">
+                <a id="1" class="soundButton sm:h-40 sm:w-40 hover:border-gray-700 border-transparent">
                     Áno, mali by sme!
                 </a>
             </div>
@@ -39,8 +39,8 @@
 
 
 <script>
-    document.getElementById("ano_mali_by_sme").addEventListener("click", function() {
-        var audio = new Audio('sound_source/ano_mali_by_sme.mp3');
+    document.getElementById("1").addEventListener("click", function() {
+        var audio = new Audio('sound_source/1.mp3');
         audio.play();
     });
 </script>
